Ajout mod webauthn, methode generer_challenge_auth
Ajout methode random_vec dans common

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_in
 env_logger = "0.9.0"
 millegrilles_common_rust = { path = "millegrilles_common_rust" }
 serde = { version = "1.0", features = ["derive"] }
+# slauth = "0.5.0"
+webauthn-rs = "0.2.5"
