--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "millegrilles_common_rust"]
 	path = millegrilles_common_rust
-	url = ssh://git.maceroc.com/git/millegrilles_common_rust
+	url = ssh://git.maple.maceroc.com/git/millegrilles_common_rust
